<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailScreenFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/detailScreenDiscoverBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailScreenImageView"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:contentDescription="@string/todo"
                android:paddingTop="40dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailScreenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailScreenImageView">

            </TextView>

            <TextView
                android:id="@+id/detailScreenOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:text="Overview"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailScreenTitle">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/bg_white_fade"
        app:layout_constraintBottom_toBottomOf="@id/detailScreenBackBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/detailScreenBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/todo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailScreenRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/rate"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <Button
        android:id="@+id/detailScreenDiscoverBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/discover_button_background"
        android:text="@string/discover"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>