<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/topRatedImageView"
        android:layout_width="106dp"
        android:layout_height="128dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/rate_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitleRated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topRatedImageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/rateTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title">

        </TextView>

        <TextView
            android:id="@+id/rateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/overviewTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/overview1"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/topRatedImageView"
        app:layout_constraintTop_toBottomOf="@id/layoutTitleRated">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>